--- a/template/templates/template/french.html
+++ b/template/templates/template/french.html
@@ -169,12 +169,12 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="review_video">
-                                <iframe width="100%" height="400" src="https://www.youtube.com/embed/2vwQuABLGUU" frameborder="0" allowfullscreen></iframe>
+                                <iframe width="100%" height="400" src="https://www.youtube.com/embed/xJlbfGd368A?si=z_dIsJsnDRac6qWe" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="review_video">
-                                <iframe width="100%" height="400" src="https://www.youtube.com/embed/LfvoXGxhyHY" frameborder="0" allowfullscreen></iframe>
+                                <iframe width="100%" height="400" src="https://youtube.com/embed/Y-oycl5c75o?si=2QoWPiGVaq7rDjRX" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -198,21 +198,25 @@
          <section class="students">
             <div class="container">
                 <div class="section_header">
-                    <h4>IELTS পরীক্ষার জন্য প্র্যাকটিক্যাল প্রস্তুতির মাধ্যমে ভয়ের র barrier ভেঙে আত্মবিশ্বাস তৈরি</h4>
+                    <h4>ফ্রেঞ্চ ভাষা শেখার প্র্যাকটিক্যাল পদ্ধতিতে ভয়ের বাঁধা ভেঙে আত্মবিশ্বাস তৈরি করুন</h4>
                     <br>
-                    <p>এই কোর্সটি ভাষা শেখার চারটি দক্ষতা—কথা বলা, শোনা, পড়া এবং লেখা—বিকাশের উপর ফোকাস করবে। আপনি শিখবেন কিভাবে সঠিক বাক্য গঠন করতে হয়, প্রশ্ন করতে হয়, এবং ইংরেজিতে স্পষ্টভাবে নিজেকে প্রকাশ করতে হয়।</p>
+                    <p>এই কোর্সটি, ফ্রেঞ্চ ভাষা শেখার চারটি মূল দক্ষতা বিকাশের উপর ফোকাস করবে: কথা বলা, শোনা, পড়া, এবং লেখা।
+আপনি শিখবেন, কীভাবে বাক্য গঠন করতে হয়, প্রশ্ন জিজ্ঞাসা করতে হয়, ক্রিয়াপদের ব্যবহার করতে হয়, এবং মৌলিক ফ্রেঞ্চ বাক্য তৈরির ধরণ আয়ত্ত করতে হয়।</p>
                 </div>
                 <div class="student_dtl">
                     <br>
                     <h5>কোর্সটির সাথে যা যা ফ্রী থাকছে</h5>
                     <br>
                     <ul>
-                        <li>IELTS-এ অভিজ্ঞ ও দক্ষ শিক্ষক দ্বারা পরিচালিত লাইভ ক্লাস</li>
-                        <li>ChatGPT-এর সাথে IELTS Speaking ও Writing প্র্যাকটিস (AI টুল ব্যবহার করে নিজেই প্রতিদিন প্রস্তুতির কৌশল শেখানো হবে)</li>
-                        <li>“সর্বাধিক ব্যবহৃত IELTS Vocabulary” – ১০০০+ শব্দের ফ্রি PDF (রাইটিং ও স্পিকিং স্কোর বাড়াতে সহায়তা করবে)</li>
-                        <li>লাইভ ক্লাসে বিশেষ গিভঅ্যাওয়ে ও এক্সাম ফোকাসড ম্যাটেরিয়ালস</li>
-                        <li>এই কোর্সের মাধ্যমে আপনি হয়ে উঠবেন আত্মবিশ্বাসী ও প্রস্তুত IELTS পরীক্ষার জন্য</li>
+                        <li>✅ দক্ষ ও অভিজ্ঞ শিক্ষক দ্বারা পরিচালিত, লাইভ ক্লাস</li>
+                        <li>✅ ChatGPT-এর মাধ্যমে, French language প্র্যাকটিস <br>
+                            (ChatGPT-এর সাথে, ফ্রেঞ্চ ভাষায় সাবলীলভাবে কথা বলার সম্পূর্ণ প্রক্রিয়া শেখানো হবে)</li>
+                        <li>✅ "সর্বাধিক ব্যবহৃত ফ্রেঞ্চ শব্দভাণ্ডার" এর উপর, ১০০০ শব্দের ফ্রি PDF <br>
+                            (যা জানলে, ফ্রেঞ্চ ভাষায় কথা বলা হবে অনেক সহজ)</li>
+                        <li>এই কোর্সের মাধ্যমে, ফ্রেঞ্চ ভাষা নিয়ে আপনার সব ভয় ও দুর্বলতা দূর হবে,<br>
+                            আপনি ফ্রেঞ্চ ভাষায় হয়ে উঠবেন আত্মবিশ্বাসী ও সাবলীল।</li>
                     </ul>
+
                     <br><br>
                     <h5>কোর্সটি থেকে আপনি যা যা শিখতে পারবেন</h5>
                     <br>
