--- a/template/templates/template/french.html
+++ b/template/templates/template/french.html
@@ -61,8 +61,8 @@
                 <ul class="class_details">
                     <li>
                         <div>
-                            <h3>Band 6.5-8+</h3>
-                            <h6>Complete IELTS Course</h6>
+                            <h3>১২ ঘন্টা+ </h3>
+                            <h6>Special Course</h6>
                         </div>
                     </li>
                     <li>
@@ -73,8 +73,8 @@
                     </li>
                     <li>
                         <div>
-                            <h3>Live</h3>
-                            <h6>Class with Expert Trainers</h6>
+                            <h3>ChatGPT</h3>
+                            <h6>IELTS learn Method</h6>
                         </div>
                     </li>
                     <li>
@@ -274,7 +274,7 @@
             <div class="container">
                 <div class="section_header">
                     <h3>Course Curriculum</h3>
-                    <h5 class="highlighted-text">কোর্সের সাথে থাকছে Recorded <span style="color: #11a849;">Class+Bonus👉১ মাসের Live Class</span></h5>
+                    <h5 class="highlighted-text">কোর্সের সাথে থাকছে Recorded <span style="color: #11a849;">Class</span></h5>
                 </div>
                 <div class="flex" style="justify-content: center; color: red;">
                     <h3><del>৫০০০৳</del></h3>
