--- a/template/templates/template/ielts.html
+++ b/template/templates/template/ielts.html
@@ -33,8 +33,8 @@
                             <div>
                                 <h4>Anonna Mohammad</h4>
                                 
-                                <p>Certified IELTS language Teacher,</p>
-                                <p>Band Score 7.5,8.0</p>
+                                <p>Former IELTS Lecturer at CoachUp International</p>
+                                <p>Bashundhara R/A Dhaka</p>
                             </div>
                         </div>
                     </div>
@@ -61,8 +61,8 @@
                 <ul class="class_details">
                     <li>
                         <div>
-                            <h3>Band 6.5-8+</h3>
-                            <h6>Complete IELTS Course</h6>
+                            <h3>১২ ঘন্টা+ </h3>
+                            <h6>Special Course</h6>
                         </div>
                     </li>
                     <li>
@@ -73,8 +73,8 @@
                     </li>
                     <li>
                         <div>
-                            <h3>Live</h3>
-                            <h6>Class with Expert Trainers</h6>
+                            <h3>ChatGPT</h3>
+                            <h6>IELTS Practice Method</h6>
                         </div>
                     </li>
                     <li>
@@ -682,6 +682,15 @@
                     </div>
             </div>
          </section>
+         <section class="saying">
+            <div style="display: flex; flex-direction: column; align-items: center; color: red;">
+                <h3><del>৫০০০৳</del></h3>
+                <a href="https://skillbeeacademy.com/enroll/complete-ielts-course/">
+                <button class="enroll_Now">Apply Now</button>
+                </a>
+            </div>
+            </section>
+
          
          <div class="modal">
             <div class="overlay" onclick="closePopup()"></div>
