--- a/template/templates/template/spoken_eng.html
+++ b/template/templates/template/spoken_eng.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="hero_video">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/4flPCY2Osfk?si=5hBkOjK15KNYCH-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://youtube.com/embeded/xN-_xSacnno?si=pb30jFo4tbIwUydt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -86,19 +86,23 @@
                 </ul>
                 <br><br>
                 <div class="section_header">
-                    <h3>IELTS প্রস্তুতির একটি পরিপূর্ণ কোর্স</h3>
+                    <h3>Spoken English শেখার পরিপূর্ণ কোর্স</h3>
                     <br>
                     <p>
-                        আপনি যদি উচ্চ শিক্ষা, চাকরি কিংবা স্থায়ীভাবে বিদেশে বসবাসের জন্য ইউকে, কানাডা, অস্ট্রেলিয়া বা অন্যান্য ইংরেজিভাষী দেশে যেতে চান, তবে IELTS ভালো স্কোর করা আপনার জন্য অত্যন্ত গুরুত্বপূর্ণ।<br><br>
-                        ✅ IELTS-এ ভালো স্কোর করে আপনি সহজেই কানাডা, ইউকে, অস্ট্রেলিয়া বা নিউজিল্যান্ডে পড়াশোনা বা কাজের সুযোগ পেতে পারেন।<br>
-                        ✅ অনেক বিশ্ববিদ্যালয় ও অভিবাসন প্রক্রিয়ায় কমপক্ষে 6 বা 6.5 ব্যান্ড স্কোর থাকলেই আবেদন করা যায়।<br>
-                        ✅ বাংলাদেশে অনেক আন্তর্জাতিক সংস্থা ও মাল্টিন্যাশনাল কোম্পানি আছে, যেগুলোতে চাকরি পেতে IELTS স্কোর থাকলে বাড়তি গুরুত্ব পাওয়া যায়।
+                        আপনি যদি উচ্চ শিক্ষা, চাকরি, কিংবা ব্যবসার জন্য ইংরেজিভাষী কোনো দেশে যেতে চান, তবে ইংরেজি ভাষা জানা আপনার জন্য অত্যন্ত গুরুত্বপূর্ণ।<br><br>
+
+                        ✅ ইংরেজি শিখে, আপনি সহজেই যুক্তরাজ্য, যুক্তরাষ্ট্র, কানাডা, অস্ট্রেলিয়া বা অন্যান্য ইংরেজিভাষী দেশে পড়াশোনা বা কাজের সুযোগ পেতে পারেন।<br>
+                        ✅ অনেক বিশ্ববিদ্যালয় ও চাকরির ক্ষেত্র রয়েছে, যেখানে ভালো ইংরেজি যোগাযোগ দক্ষতা থাকলেই সুযোগ পাওয়া যায় — এমনকি IELTS ছাড়াও কিছু ক্ষেত্রে সুবিধা পাওয়া সম্ভব।<br>
+                        ✅ বাংলাদেশে অনেক আন্তর্জাতিক প্রতিষ্ঠান, এনজিও, এবং বহুজাতিক কোম্পানি রয়েছে, যেগুলোর সাথে কাজ করতে, ইংরেজি ভাষাজ্ঞান থাকলে অগ্রাধিকার পাওয়া যায়।<br><br>
+
+                        এই কোর্সটি, বাংলাদেশি শিক্ষার্থীদের জন্য বিশেষভাবে তৈরি, যেন তারা ইংরেজি ভাষার সবদিক ভালোভাবে আয়ত্ত করে, ভবিষ্যতের সম্ভাবনাময় পথ তৈরি করতে পারে।
+
                     </p>
                 </div>
                 <div class="course_dtl">
                     <div>
                         <div class="ja_shikben">
-                            <h4>🎓 Skill Academy নিয়ে এসেছে অনলাইন IELTS প্রস্তুতি কোর্স</h4>
+                            <h4>🎓 Skill Academy নিয়ে এসেছে অনলাইন Spoken English শেখার পরিপূর্ণ কোর্স</h4>
                             <br>
                             <ul>
                                 <li><p>📘 Foundation to Advanced – ধাপে ধাপে প্রস্তুতির ব্যবস্থা</p></li>
