--- a/template/templates/template/home.html
+++ b/template/templates/template/home.html
@@ -79,7 +79,7 @@
       <div class="lg:max-w-[112rem] container mx-auto py-10 lg:px-6">
         <div class="flex justify-center items-center flex-col xl:my-10">
           <h1 class="text-xl text-center lg:text-[30px] font-bold">
-            আমাদের সর্বাধিক পছন্দকৃত কোর্সসমূহ
+            ccc
           </h1>
           <p
             class="text-base text-center lg:text-lg xl:text-xl text-gray-600 font-samibold mt-4"
