--- a/template/templates/template/jap.html
+++ b/template/templates/template/jap.html
@@ -32,7 +32,7 @@
                         <div class="flex teacher">
                                 <!-- <span><img src="https://cdn.jsdelivr.net/gh/mdsibgatullah/keeron/assets/images/Elta-Karim.jpg" alt="EltaKarim"></span> -->
                             <div>
-                                <h4>SANTO AHMED</h4>
+                                <h4>Anonna Mohammad</h4>
                                 <p>JLPT Certified</p>
                                 <p>Certified Japanese language Teacher,</p>
                                 <p>Arts and Entertainment</p>
